# ULF_COM

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml  tests.yml
data/: operating_modes.pu  ulfcom.dot
examples/: CMakeLists.txt  main.cpp
examples/basics/: CMakeLists.txt  main.cpp
include/ulf/: com.hpp
include/ulf/com/: commands.hpp  not_ok.hpp  ok.hpp  ping.hpp  str2cmd.hpp  str2mx1bin.hpp
include/ulfcom/: commands.hpp  not_ok.hpp  ok.hpp  ping.hpp  str2cmd.hpp  str2mx1bin.hpp  ulfcom.hpp
include/ulfcom/rx/: str2binary.hpp  str2cmd.hpp  str2command.hpp  str2mx1bin.hpp
include/ulfcom/tx/: not_ok.hpp  ok.hpp  ping.hpp
tests/: CMakeLists.txt  bla.cpp  ping.cpp  str2cmd.cpp  str2mx1bin.cpp
tests/com/: ping.cpp  str2cmd.cpp  str2mx1bin.cpp
tests/rx/: str2binary.cpp  str2cmd.cpp  str2mx1bin.cpp
tests/tx/: ping.cpp
